# testsniff

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/skills/code-review/: SKILL.md
.githooks/: install.sh  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: agent-operations.md  application-architecture.md  branch-and-release-rules.md  core-beliefs.md  git-operation-skill-rules.md  index.md  internal-quality-rules.md  issue-management-rules.md  issue-to-plan-workflow.md  local-git-hook-rules.md  pull-request-rules.md  reporting-contract.md  technical-stack.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  new-user-onboarding.md  rule-catalog-scope.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
src/testsniff/: __init__.py
tests/integration/: test_cli.py  test_pre_push_hook.py
tests/unit/: test_ast_index_edge_cases.py  test_cli_and_compat.py  test_comment_placeholder_helpers.py  test_comments_only_test_rule.py  test_config_loader.py  test_disabled_ignored_test_rule.py  test_disabled_ignored_test_semantics.py  test_duplicate_assert_rule.py  test_duplicate_assert_semantics.py  test_empty_test_rule.py  test_missing_assertion_rule.py  test_missing_assertion_semantics.py  test_reporting.py  test_scan_service.py  test_test_target_detection.py
(+108 files in other folders)
